--- a/content/registrasi/pendaftaran-pemberkatan-nikah.html
+++ b/content/registrasi/pendaftaran-pemberkatan-nikah.html
@@ -6,7 +6,119 @@ layout = "default"
 draft = false
 +++
 
-<form action="">
-    <input type="text" name="" id="">
-    <input type="submit" value="Kirim">
+<form class="row g-3" name="pemberkatan-nikah" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+    <div class="hidden col-12">
+        <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-tempatpemberkatan" class="form-label">Tempat Pemberkatan Nikah</label>
+        <input type="text" class="form-control" id="el-tempatpemberkatan" value="GBI Pusat Perakitan" placeholder="" readonly>
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-haripemberkatan" class="form-label">Hari Pemberkatan Nikah</label>
+        <input type="text" class="form-control" id="el-haripemberkatan" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-tglpemberkatan" class="form-label">Tanggal Pemberkatan Nikah</label>
+        <input type="datetime-local" class="form-control" name="tglpemberkatan" id="el-tglpemberkatan">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-kotapemberkatan" class="form-label">Kota Pemberkatan Nikah</label>
+        <input type="text" class="form-control" id="el-kotapemberkatan" placeholder="">
+    </div>
+    <div class="col-12 mb-3">
+        <label for="el-namalengkappria" class="form-label">Nama Lengkap Mempelai Pria</label>
+        <input type="text" class="form-control" id="el-namalengkappria" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-harilahirpria" class="form-label">Tempat Lahir Mempelai Pria</label>
+        <input type="text" class="form-control" id="el-harilahirpria" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-tgllahirpria" class="form-label">Tanggal Lahir Mempelai Pria</label>
+        <input type="date" class="form-control" name="tgllahirpria" id="el-tgllahirpria">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-tempatbaptispria" class="form-label">Tempat Baptis Mempelai Pria (Nama Gereja)</label>
+        <input type="text" class="form-control" id="el-tempatbaptispria" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-haribaptispria" class="form-label">Tanggal Baptis Mempelai Pria</label>
+        <input type="date" class="form-control" name="haribaptispria" id="el-harilahirpria">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-phonepria" class="form-label">Telp/HP Mempelai Pria</label>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="el-adphonepria">+62</span>
+            <input type="text" class="form-control" id="el-phonepria" aria-describedby="el-adphonepria">
+        </div>
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-whatsapppria" class="form-label">WhatsApp Mempelai Pria</label>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="el-adwhatsapppria">+62</span>
+            <input type="text" class="form-control" id="el-whatsapppria" aria-describedby="el-adwhatsapppria">
+        </div>
+    </div>
+    <div class="col-12 mb-3">
+        <label for="el-alamatpria" class="form-label">Alamat Mempelai Pria</label>
+        <input type="text" class="form-control" id="el-alamatpria" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-namaayahpria" class="form-label">Nama Ayah Mempelai Pria</label>
+        <input type="text" class="form-control" id="el-namaayahpria" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-namaibupria" class="form-label">Nama Ibu Mempelai Pria</label>
+        <input type="text" class="form-control" id="el-namaibupria" placeholder="">
+    </div>
+    <div class="col-12 mb-3">
+        <label for="el-namalengkapperempuan" class="form-label">Nama Lengkap Mempelai Perempuan</label>
+        <input type="text" class="form-control" id="el-namalengkapperempuan" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-harilahirperempuan" class="form-label">Tempat Lahir Mempelai Perempuan</label>
+        <input type="text" class="form-control" id="el-harilahirperempuan" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-tgllahirperempuan" class="form-label">Tanggal Lahir Mempelai Perempuan</label>
+        <input type="date" class="form-control" name="tgllahirperempuan" id="el-tgllahirperempuan">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-tempatbaptisperempuan" class="form-label">Tempat Baptis Mempelai Perempuan (Nama Gereja)</label>
+        <input type="text" class="form-control" id="el-tempatbaptisperempuan" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-haribaptisperempuan" class="form-label">Tanggal Baptis Mempelai Perempuan</label>
+        <input type="date" class="form-control" name="haribaptisperempuan" id="el-harilahirperempuan">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-phoneperempuan" class="form-label">Telp/HP Mempelai Perempuan</label>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="el-adphoneperempuan">+62</span>
+            <input type="text" class="form-control" id="el-phoneperempuan" aria-describedby="el-adphoneperempuan">
+        </div>
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-whatsappperempuan" class="form-label">WhatsApp Mempelai Perempuan</label>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="el-adwhatsappperempuan">+62</span>
+            <input type="text" class="form-control" id="el-whatsappperempuan" aria-describedby="el-adwhatsappperempuan">
+        </div>
+    </div>
+    <div class="col-12 mb-3">
+        <label for="el-alamatperempuan" class="form-label">Alamat Mempelai Perempuan</label>
+        <input type="text" class="form-control" id="el-alamatperempuan" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-namaayahperempuan" class="form-label">Nama Ayah Mempelai Perempuan</label>
+        <input type="text" class="form-control" id="el-namaayahperempuan" placeholder="">
+    </div>
+    <div class="col-6 mb-3">
+        <label for="el-namaibuperempuan" class="form-label">Nama Ibu Mempelai Perempuan</label>
+        <input type="text" class="form-control" id="el-namaibuperempuan" placeholder="">
+    </div>
+    <div class="col-12">
+        <button class="btn btn-primary" type="submit">Kirim</button>
+    </div>
 </form>
