--- a/content/registrasi/pendaftaran-pemberkatan-nikah.html
+++ b/content/registrasi/pendaftaran-pemberkatan-nikah.html
@@ -12,11 +12,11 @@ draft = false
     </div>
     <div class="col-6 mb-3">
         <label for="el-tempatpemberkatan" class="form-label">Tempat Pemberkatan Nikah</label>
-        <input type="text" class="form-control" id="el-tempatpemberkatan" value="GBI Pusat Perakitan" placeholder="" readonly>
+        <input type="text" class="form-control" id="el-tempatpemberkatan" value="GBI Pusat Perakitan" readonly>
     </div>
     <div class="col-6 mb-3">
         <label for="el-haripemberkatan" class="form-label">Hari Pemberkatan Nikah</label>
-        <input type="text" class="form-control" id="el-haripemberkatan" placeholder="">
+        <input type="text" class="form-control" id="el-haripemberkatan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tglpemberkatan" class="form-label">Tanggal Pemberkatan Nikah</label>
@@ -24,15 +24,15 @@ draft = false
     </div>
     <div class="col-6 mb-3">
         <label for="el-kotapemberkatan" class="form-label">Kota Pemberkatan Nikah</label>
-        <input type="text" class="form-control" id="el-kotapemberkatan" placeholder="">
+        <input type="text" class="form-control" id="el-kotapemberkatan">
     </div>
     <div class="col-12 mb-3">
         <label for="el-namalengkappria" class="form-label">Nama Lengkap Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-namalengkappria" placeholder="">
+        <input type="text" class="form-control" id="el-namalengkappria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-harilahirpria" class="form-label">Tempat Lahir Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-harilahirpria" placeholder="">
+        <input type="text" class="form-control" id="el-harilahirpria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tgllahirpria" class="form-label">Tanggal Lahir Mempelai Pria</label>
@@ -40,7 +40,7 @@ draft = false
     </div>
     <div class="col-6 mb-3">
         <label for="el-tempatbaptispria" class="form-label">Tempat Baptis Mempelai Pria (Nama Gereja)</label>
-        <input type="text" class="form-control" id="el-tempatbaptispria" placeholder="">
+        <input type="text" class="form-control" id="el-tempatbaptispria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-haribaptispria" class="form-label">Tanggal Baptis Mempelai Pria</label>
@@ -62,23 +62,23 @@ draft = false
     </div>
     <div class="col-12 mb-3">
         <label for="el-alamatpria" class="form-label">Alamat Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-alamatpria" placeholder="">
+        <input type="text" class="form-control" id="el-alamatpria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaayahpria" class="form-label">Nama Ayah Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-namaayahpria" placeholder="">
+        <input type="text" class="form-control" id="el-namaayahpria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaibupria" class="form-label">Nama Ibu Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-namaibupria" placeholder="">
+        <input type="text" class="form-control" id="el-namaibupria">
     </div>
     <div class="col-12 mb-3">
         <label for="el-namalengkapperempuan" class="form-label">Nama Lengkap Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-namalengkapperempuan" placeholder="">
+        <input type="text" class="form-control" id="el-namalengkapperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-harilahirperempuan" class="form-label">Tempat Lahir Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-harilahirperempuan" placeholder="">
+        <input type="text" class="form-control" id="el-harilahirperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tgllahirperempuan" class="form-label">Tanggal Lahir Mempelai Perempuan</label>
@@ -86,7 +86,7 @@ draft = false
     </div>
     <div class="col-6 mb-3">
         <label for="el-tempatbaptisperempuan" class="form-label">Tempat Baptis Mempelai Perempuan (Nama Gereja)</label>
-        <input type="text" class="form-control" id="el-tempatbaptisperempuan" placeholder="">
+        <input type="text" class="form-control" id="el-tempatbaptisperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-haribaptisperempuan" class="form-label">Tanggal Baptis Mempelai Perempuan</label>
@@ -108,15 +108,15 @@ draft = false
     </div>
     <div class="col-12 mb-3">
         <label for="el-alamatperempuan" class="form-label">Alamat Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-alamatperempuan" placeholder="">
+        <input type="text" class="form-control" id="el-alamatperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaayahperempuan" class="form-label">Nama Ayah Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-namaayahperempuan" placeholder="">
+        <input type="text" class="form-control" id="el-namaayahperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaibuperempuan" class="form-label">Nama Ibu Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-namaibuperempuan" placeholder="">
+        <input type="text" class="form-control" id="el-namaibuperempuan">
     </div>
     <div class="col-12">
         <button class="btn btn-primary" type="submit">Kirim</button>
