--- a/content/registrasi/pendaftaran-pemberkatan-nikah.html
+++ b/content/registrasi/pendaftaran-pemberkatan-nikah.html
@@ -12,111 +12,111 @@ draft = false
     </div>
     <div class="col-6 mb-3">
         <label for="el-tempatpemberkatan" class="form-label">Tempat Pemberkatan Nikah</label>
-        <input type="text" class="form-control" id="el-tempatpemberkatan" value="GBI Pusat Perakitan" readonly>
+        <input type="text" class="form-control" name="el-tempatpemberkatan" value="GBI Pusat Perakitan" readonly>
     </div>
     <div class="col-6 mb-3">
         <label for="el-haripemberkatan" class="form-label">Hari Pemberkatan Nikah</label>
-        <input type="text" class="form-control" id="el-haripemberkatan">
+        <input type="text" class="form-control" name="el-haripemberkatan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tglpemberkatan" class="form-label">Tanggal Pemberkatan Nikah</label>
-        <input type="datetime-local" class="form-control" name="tglpemberkatan" id="el-tglpemberkatan">
+        <input type="datetime-local" class="form-control" name="el-tglpemberkatan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-kotapemberkatan" class="form-label">Kota Pemberkatan Nikah</label>
-        <input type="text" class="form-control" id="el-kotapemberkatan">
+        <input type="text" class="form-control" name="el-kotapemberkatan">
     </div>
     <div class="col-12 mb-3">
         <label for="el-namalengkappria" class="form-label">Nama Lengkap Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-namalengkappria">
+        <input type="text" class="form-control" name="el-namalengkappria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-harilahirpria" class="form-label">Tempat Lahir Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-harilahirpria">
+        <input type="text" class="form-control" name="el-harilahirpria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tgllahirpria" class="form-label">Tanggal Lahir Mempelai Pria</label>
-        <input type="date" class="form-control" name="tgllahirpria" id="el-tgllahirpria">
+        <input type="date" class="form-control" name="el-tgllahirpria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tempatbaptispria" class="form-label">Tempat Baptis Mempelai Pria (Nama Gereja)</label>
-        <input type="text" class="form-control" id="el-tempatbaptispria">
+        <input type="text" class="form-control" name="el-tempatbaptispria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-haribaptispria" class="form-label">Tanggal Baptis Mempelai Pria</label>
-        <input type="date" class="form-control" name="haribaptispria" id="el-harilahirpria">
+        <input type="date" class="form-control" name="el-harilahirpria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-phonepria" class="form-label">Telp/HP Mempelai Pria</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adphonepria">+62</span>
-            <input type="text" class="form-control" id="el-phonepria" aria-describedby="el-adphonepria">
+            <input type="text" class="form-control" name="el-phonepria" aria-describedby="el-adphonepria">
         </div>
     </div>
     <div class="col-6 mb-3">
         <label for="el-whatsapppria" class="form-label">WhatsApp Mempelai Pria</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adwhatsapppria">+62</span>
-            <input type="text" class="form-control" id="el-whatsapppria" aria-describedby="el-adwhatsapppria">
+            <input type="text" class="form-control" name="el-whatsapppria" aria-describedby="el-adwhatsapppria">
         </div>
     </div>
     <div class="col-12 mb-3">
         <label for="el-alamatpria" class="form-label">Alamat Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-alamatpria">
+        <input type="text" class="form-control" name="el-alamatpria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaayahpria" class="form-label">Nama Ayah Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-namaayahpria">
+        <input type="text" class="form-control" name="el-namaayahpria">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaibupria" class="form-label">Nama Ibu Mempelai Pria</label>
-        <input type="text" class="form-control" id="el-namaibupria">
+        <input type="text" class="form-control" name="el-namaibupria">
     </div>
     <div class="col-12 mb-3">
         <label for="el-namalengkapperempuan" class="form-label">Nama Lengkap Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-namalengkapperempuan">
+        <input type="text" class="form-control" name="el-namalengkapperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-harilahirperempuan" class="form-label">Tempat Lahir Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-harilahirperempuan">
+        <input type="text" class="form-control" name="el-harilahirperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tgllahirperempuan" class="form-label">Tanggal Lahir Mempelai Perempuan</label>
-        <input type="date" class="form-control" name="tgllahirperempuan" id="el-tgllahirperempuan">
+        <input type="date" class="form-control" name="el-tgllahirperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tempatbaptisperempuan" class="form-label">Tempat Baptis Mempelai Perempuan (Nama Gereja)</label>
-        <input type="text" class="form-control" id="el-tempatbaptisperempuan">
+        <input type="text" class="form-control" name="el-tempatbaptisperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-haribaptisperempuan" class="form-label">Tanggal Baptis Mempelai Perempuan</label>
-        <input type="date" class="form-control" name="haribaptisperempuan" id="el-harilahirperempuan">
+        <input type="date" class="form-control" name="el-harilahirperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-phoneperempuan" class="form-label">Telp/HP Mempelai Perempuan</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adphoneperempuan">+62</span>
-            <input type="text" class="form-control" id="el-phoneperempuan" aria-describedby="el-adphoneperempuan">
+            <input type="text" class="form-control" name="el-phoneperempuan" aria-describedby="el-adphoneperempuan">
         </div>
     </div>
     <div class="col-6 mb-3">
         <label for="el-whatsappperempuan" class="form-label">WhatsApp Mempelai Perempuan</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adwhatsappperempuan">+62</span>
-            <input type="text" class="form-control" id="el-whatsappperempuan" aria-describedby="el-adwhatsappperempuan">
+            <input type="text" class="form-control" name="el-whatsappperempuan" aria-describedby="el-adwhatsappperempuan">
         </div>
     </div>
     <div class="col-12 mb-3">
         <label for="el-alamatperempuan" class="form-label">Alamat Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-alamatperempuan">
+        <input type="text" class="form-control" name="el-alamatperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaayahperempuan" class="form-label">Nama Ayah Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-namaayahperempuan">
+        <input type="text" class="form-control" name="el-namaayahperempuan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaibuperempuan" class="form-label">Nama Ibu Mempelai Perempuan</label>
-        <input type="text" class="form-control" id="el-namaibuperempuan">
+        <input type="text" class="form-control" name="el-namaibuperempuan">
     </div>
     <div class="col-12">
         <button class="btn btn-primary" type="submit">Kirim</button>
