--- a/content/registrasi/pendaftaran-jemaat.html
+++ b/content/registrasi/pendaftaran-jemaat.html
@@ -12,35 +12,35 @@ draft = false
     </div>
     <div class="col-12 mb-3">
         <label for="el-namalengkap" class="form-label">Nama Lengkap</label>
-        <input type="text" class="form-control" id="el-namalengkap">
+        <input type="text" class="form-control" name="el-namalengkap">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namapanggilan" class="form-label">Nama Panggilan</label>
-        <input type="text" class="form-control" id="el-namapanggilan">
+        <input type="text" class="form-control" name="el-namapanggilan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-namabaptis" class="form-label">Nama Baptis (jika ada)</label>
-        <input type="text" class="form-control" id="el-namabaptis">
+        <input type="text" class="form-control" name="el-namabaptis">
     </div>
     <div class="col-12 mb-3">
         <label for="el-tglgabung" class="form-label">Tanggal Bergabung</label>
-        <input type="date" class="form-control" name="tglgabung" id="el-tglgabung">
+        <input type="date" class="form-control" name="el-tglgabung">
     </div>
     <div class="col-12 mb-3">
         <label for="el-ktp" class="form-label">No KTP</label>
-        <input type="text" class="form-control" id="el-ktp">
+        <input type="text" class="form-control" name="el-ktp">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tempatlahir" class="form-label">Tempat Lahir</label>
-        <input type="text" class="form-control" id="el-tempatlahir">
+        <input type="text" class="form-control" name="el-tempatlahir">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tgllahir" class="form-label">Tanggal Lahir</label>
-        <input type="date" class="form-control" name="tgllahir" id="el-tgllahir">
+        <input type="date" class="form-control" name="el-tgllahir">
     </div>
     <div class="col-12 mb-3">
         <label for="el-kelamin" class="form-label">Jenis Kelamin</label>
-        <select class="form-select" id="el-kelamin" aria-label="Pilih jenis kelamin">
+        <select class="form-select" name="el-kelamin[]" aria-label="Pilih jenis kelamin">
             <option selected>Pilih salah satu</option>
             <option value="Laki-laki">Laki-laki</option>
             <option value="Perempuan">Perempuan</option>
@@ -48,7 +48,7 @@ draft = false
     </div>
     <div class="col-12 mb-3">
         <label for="el-goldarah" class="form-label">Golongan Darah</label>
-        <select class="form-select" id="el-goldarah" aria-label="Pilih golongan darah">
+        <select class="form-select" name="el-goldarah[]" aria-label="Pilih golongan darah">
             <option selected>Pilih salah satu</option>
             <option value="A">A</option>
             <option value="B">B</option>
@@ -58,7 +58,7 @@ draft = false
     </div>
     <div class="col-12 mb-3">
         <label for="el-status" class="form-label">Status</label>
-        <select class="form-select" id="el-status" aria-label="Pilih status">
+        <select class="form-select" name="el-status[]" aria-label="Pilih status">
             <option selected>Pilih salah satu</option>
             <option value="Lajang">Lajang</option>
             <option value="Menikah">Menikah</option>
@@ -66,81 +66,77 @@ draft = false
     </div>
     <div class="col-12 mb-3">
         <label for="el-namapasangan" class="form-label">Nama Lengkap Pasangan (jika sudah Menikah)</label>
-        <input type="text" class="form-control" id="el-namapasangan">
+        <input type="text" class="form-control" name="el-namapasangan">
     </div>
     <div class="col-12 mb-3">
         <label for="el-alamat" class="form-label">Alamat</label>
-        <input type="text" class="form-control" id="el-alamat">
+        <input type="text" class="form-control" name="el-alamat">
     </div>
     <div class="col-6 mb-3">
         <label for="el-rt" class="form-label">RT</label>
-        <input type="text" class="form-control" id="el-rt">    
+        <input type="text" class="form-control" name="el-rt">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-rw" class="form-label">RW</label>
-        <input type="text" class="form-control" id="el-rw">    
+        <input type="text" class="form-control" name="el-rw">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-kelurahan" class="form-label">Kelurahan</label>
-        <input type="text" class="form-control" id="el-kelurahan">    
+        <input type="text" class="form-control" name="el-kelurahan">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-kecamatan" class="form-label">Kecamatan</label>
-        <input type="text" class="form-control" id="el-kecamatan">    
+        <input type="text" class="form-control" name="el-kecamatan">    
     </div>
     <div class="col-10 mb-3">
         <label for="el-kotakab" class="form-label">Kota/Kabupaten</label>
-        <input type="text" class="form-control" id="el-kotakab">
+        <input type="text" class="form-control" name="el-kotakab">
     </div>            
     <div class="col-2 mb-3">
         <label for="el-kodepos" class="form-label">Kode Pos</label>
-        <input type="number" class="form-control" id="el-kodepos">
+        <input type="number" class="form-control" name="el-kodepos">
     </div>            
     <div class="col-6 mb-3">
         <label for="el-provinsi" class="form-label">Provinsi</label>
-        <input type="text" class="form-control" id="el-provinsi">    
+        <input type="text" class="form-control" name="el-provinsi">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-negara" class="form-label">Negara</label>
-        <input type="text" class="form-control" id="el-negara">    
+        <input type="text" class="form-control" name="el-negara">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-phone" class="form-label">Telp/HP</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adphone">+62</span>
-            <input type="text" class="form-control" id="el-phone" aria-describedby="el-adphone">
+            <input type="text" class="form-control" name="el-phone" aria-describedby="el-adphone">
         </div>
-        <!-- <label for="el-phone" class="form-label">Telp/HP</label>
-        <input type="text" class="form-control" id="el-phone">     -->
     </div>
     <div class="col-6 mb-3">
         <label for="el-whatsapp" class="form-label">WhatsApp</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adwhatsapp">+62</span>
-            <input type="text" class="form-control" id="el-whatsapp" aria-describedby="el-adwhatsapp">
+            <input type="text" class="form-control" name="el-whatsapp" aria-describedby="el-adwhatsapp">
         </div>
-        <!-- <label for="el-phone" class="form-label">Telp/HP</label>
-        <input type="text" class="form-control" id="el-whatsapp">     -->
     </div>
     <div class="col-12 mb-3">
         <label for="el-email" class="form-label">Email</label>
-        <input type="text" class="form-control" id="el-email">    
+        <input type="text" class="form-control" name="el-email">    
     </div>
     <div class="col-12 mb-3">
         <label for="el-pekerjaan" class="form-label">Pekerjaan</label>
-        <input type="text" class="form-control" id="el-pekerjaan">    
+        <input type="text" class="form-control" name="el-pekerjaan">    
     </div>
     <div class="col-12 mb-3">
         <label for="el-pendidikan" class="form-label">Pendidikan Terakhir</label>
-        <input type="text" class="form-control" id="el-pendidikan">    
+        <input type="text" class="form-control" name="el-pendidikan">    
     </div>
     <div class="col-12 mb-3">
         <label for="el-ketrampilan" class="form-label">Ketrampilan</label>
-        <input type="text" class="form-control" id="el-ketrampilan">    
+        <input type="text" class="form-control" name="el-ketrampilan">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-baptisan" class="form-label">Baptis Selam</label>
-        <select class="form-select" id="el-baptisan" aria-label="Pilih status">
+        <select class="form-select" name="el-baptisan[]" aria-label="Pilih status">
             <option selected>Pilih salah satu</option>
             <option value="Belum">Belum</option>
             <option value="Sudah">Sudah</option>
@@ -148,11 +144,11 @@ draft = false
     </div>
     <div class="col-6 mb-3">
         <label for="el-tglbaptis" class="form-label">Tanggal Baptis (jika Sudah)</label>
-        <input type="date" class="form-control" name="tglbaptis" id="el-tglbaptis">
+        <input type="date" class="form-control" name="el-tglbaptis">
     </div>
     <div class="col-6 mb-3">
         <label for="el-somkom" class="form-label">SOM/KOM</label>
-        <select class="form-select" id="el-somkom" aria-label="Pilih status">
+        <select class="form-select" name="el-somkom[]" aria-label="Pilih status">
             <option selected>Pilih salah satu</option>
             <option value="Belum">Belum</option>
             <option value="Sudah">Sudah</option>
@@ -160,7 +156,7 @@ draft = false
     </div>
     <div class="col-6 mb-3">
         <label for="el-keanggotaan" class="form-label">Jenis Keanggotaan</label>
-        <select class="form-select" id="el-keanggotaan" aria-label="Pilih status">
+        <select class="form-select" name="el-keanggotaan[]" aria-label="Pilih status">
             <option selected>Pilih salah satu</option>
             <option value="Dewasa">Dewasa</option>
             <option value="Anak">Anak</option>
