--- a/content/registrasi/pendaftaran-penyerahan-anak.html
+++ b/content/registrasi/pendaftaran-penyerahan-anak.html
@@ -12,19 +12,19 @@ draft = false
     </div>
     <div class="col-12 mb-3">
         <label for="el-namalengkap" class="form-label">Nama Lengkap Anak (sesuai Akta Lahir)</label>
-        <input type="text" class="form-control" id="el-namalengkap">
+        <input type="text" class="form-control" name="el-namalengkap">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tempatlahir" class="form-label">Tempat Lahir</label>
-        <input type="text" class="form-control" id="el-tempatlahir">
+        <input type="text" class="form-control" name="el-tempatlahir">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tgllahir" class="form-label">Tanggal Lahir</label>
-        <input type="date" class="form-control" name="tgllahir" id="el-tgllahir">
+        <input type="date" class="form-control" name="el-tgllahir">
     </div>
     <div class="col-12 mb-3">
         <label for="el-kelamin" class="form-label">Jenis Kelamin</label>
-        <select class="form-select" id="el-kelamin" aria-label="Pilih jenis kelamin">
+        <select class="form-select" name="el-kelamin[]" aria-label="Pilih jenis kelamin">
             <option selected>Pilih salah satu</option>
             <option value="Laki-laki">Laki-laki</option>
             <option value="Perempuan">Perempuan</option>
@@ -32,45 +32,41 @@ draft = false
     </div>
     <div class="col-6 mb-3">
         <label for="el-namabapak" class="form-label">Nama Ayah (sesuai Akta Lahir)</label>
-        <input type="text" class="form-control" id="el-namabapak">    
+        <input type="text" class="form-control" name="el-namabapak">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-najbapak" class="form-label">NAJ Ayah (11 digit)</label>
-        <input type="number" class="form-control" id="el-najbapak">    
+        <input type="number" class="form-control" name="el-najbapak">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-namaibu" class="form-label">Nama Ibu (sesuai Akta Lahir)</label>
-        <input type="text" class="form-control" id="el-namaibu">    
+        <input type="text" class="form-control" name="el-namaibu">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-najibu" class="form-label">NAJ Ibu (11 digit)</label>
-        <input type="number" class="form-control" id="el-najibu">    
+        <input type="number" class="form-control" name="el-najibu">    
     </div>
     <div class="col-6 mb-3">
         <label for="el-haridiserahkan" class="form-label">Hari Penyerahan Anak</label>
-        <input type="text" class="form-control" id="el-haridiserahkan">
+        <input type="text" class="form-control" name="el-haridiserahkan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-tgldiserahkan" class="form-label">Tanggal Penyerahan Anak</label>
-        <input type="date" class="form-control" name="tgldiserahkan" id="el-tgldiserahkan">
+        <input type="date" class="form-control" name="el-tgldiserahkan">
     </div>
     <div class="col-6 mb-3">
         <label for="el-phone" class="form-label">Telp/HP</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adphone">+62</span>
-            <input type="text" class="form-control" id="el-phone" aria-describedby="el-adphone">
+            <input type="text" class="form-control" name="el-phone" aria-describedby="el-adphone">
         </div>
-        <!-- <label for="el-phone" class="form-label">Telp/HP</label>
-        <input type="text" class="form-control" id="el-phone">     -->
     </div>
     <div class="col-6 mb-3">
         <label for="el-whatsapp" class="form-label">WhatsApp</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adwhatsapp">+62</span>
-            <input type="text" class="form-control" id="el-whatsapp" aria-describedby="el-adwhatsapp">
+            <input type="text" class="form-control" name="el-whatsapp" aria-describedby="el-adwhatsapp">
         </div>
-        <!-- <label for="el-phone" class="form-label">Telp/HP</label>
-        <input type="text" class="form-control" id="el-whatsapp">     -->
     </div>
     <div class="col-12">
         <button class="btn btn-primary" type="submit">Kirim</button>
